blockml/test/valid/13_filter_expressions/v33/v33d.dashboard
dashboard: v33d
title: 'sales'
reports:
- title: 'weekly'
  model: v33m
  default_filters:
    a.created___day_of_week:
    - 'Monday'
    - 'Tuesday'
    - 'Wednesday'
    - 'Thursday'
    - 'Friday'
    - 'Saturday'
    - 'Sunday'
    - 'any'
    - 'not Monday'
    - 'not Tuesday'
    - 'not Wednesday'
    - 'not Thursday'
    - 'not Friday'
    - 'not Saturday'
    - 'not Sunday'
  select:
  - a.dim6
  type: 'table'

