blockml/test/errors/11_report/e87/e87d.dashboard
dashboard: e87d
title: 'sales'
reports:
- title: 'overview'
  model: e87m
  select:           
  - mf.unk

